# libdvbsub

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  demux_input.c  libdvbsub-1.pc.in
docs/reference/: Makefile.am  dvbsub-docs.sgml  dvbsub-sections.txt  dvbsub.types  version.xml.in
src/: Makefile.am  demux_input.c  dvb-log.c  dvb-log.h  dvb-sub.c  dvb-sub.h  main.c
